NDC support in detailsView.groovy. See ticket:27.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@141 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/detailsView/detailsView.css
+++ b/lilith/src/main/resources/detailsView/detailsView.css
@@ -1,38 +1,46 @@
-body {
+body
+{
 	margin: 0;
 	padding: 0; /*	background: #ffff00; */
 }
 
-table {
+table
+{
 	border-spacing: 0;
 }
 
-tr.even {
+tr.even
+{
 	background: #e9edf2;
 }
 
-tr.odd {
+tr.odd
+{
 	background: #ffffff;
 }
 
-td {
+td
+{
 	border-top: none;
 	border-right: 1px solid black;
 	border-bottom: none;
 	border-left: none;
 }
 
-th {
+th
+{
 	border-top: none;
 	border-right: 1px solid black;
 	border-bottom: none;
 	border-left: none;
 }
 
-.throwable {
+.throwable
+{
 	background: #ffcccc;
 }
 
-pre {
+pre
+{
 	white-space: pre-wrap;
 }
