Fixes ticket:45. Also added omitted elements to detailsView and changed css slightly.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@224 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/detailsView/detailsView.css
+++ b/lilith/src/main/resources/detailsView/detailsView.css
@@ -40,6 +40,13 @@ th
 	background: #ffcccc;
 }
 
+.exData
+{
+	margin-left: 2em;
+	border: 1px solid red;
+	padding: 1em;
+}
+
 pre
 {
 	white-space: pre-wrap;
