Simplified CSS a bit more.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@228 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/detailsView/detailsView.css
+++ b/lilith/src/main/resources/detailsView/detailsView.css
@@ -26,10 +26,8 @@ td,th
 	vertical-align: top;
 	text-align: left;
 	padding: 0.5em;
-	border-top: none;
+	border-style: none;
 	border-right: 1px solid black;
-	border-bottom: none;
-	border-left: none;
 }
 
 td a
