More detailsView updates. Enhanced help.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@229 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/detailsView/detailsView.css
+++ b/lilith/src/main/resources/detailsView/detailsView.css
@@ -30,6 +30,11 @@ td,th
 	border-right: 1px solid black;
 }
 
+td.throwableContainer
+{
+	padding: 0;
+}
+
 td a
 {
 	display: block;
@@ -63,4 +68,6 @@ td a:hover
 pre
 {
 	white-space: pre-wrap;
+	font-family: monospace;
+	margin: 0;
 }
