--- a/lilith/src/main/resources/detailsView/detailsView.css
+++ b/lilith/src/main/resources/detailsView/detailsView.css
@@ -1,8 +1,11 @@
 body
 {
-	font-family: sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	margin: 0;
-	padding: 0; /*	background: #ffff00; */
+	padding: 0;
+	font-size: 62.5%;
+	color: #000000;
+	background: #ffffff;
 }
 
 table
@@ -48,10 +51,12 @@ td a:link
 	background: #ffffee;
 }
 
+/*
 td a:hover
 {
 	background: #ffffaa;
 }
+*/
 
 .throwable
 {
